<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#45211A"
    android:orientation="vertical">
    <!--    android:background="#45211A"-->

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="225dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/timer"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/score_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/score"
                android:textColor="#5262F3"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <HorizontalScrollView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/score_text">

                <TextView
                    android:id="@+id/score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="0"
                    android:textColor="#5262F3"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </HorizontalScrollView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_custom"
                android:text="@string/next"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/correct_wrong_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:background="#26FF00"
                android:gravity="center"
                android:text="@string/correct_answer"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="40sp"
                android:textStyle="bold"
                android:visibility="gone"
                tools:visibility="visible" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="50dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="#4FE319"
                    android:textSize="45sp"
                    android:textStyle="bold|italic" />
            </ScrollView>
        </RelativeLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="4">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/option1"
                        android:layout_width="wrap_content"
                        android:layout_height="75dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_gravity="center"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/button_custom"
                        android:enabled="true"
                        android:padding="20dp"
                        android:text="@string/option_1"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/option2"
                        android:layout_width="wrap_content"
                        android:layout_height="75dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginEnd="40dp"
                        android:layout_marginBottom="2dp"
                        android:background="@drawable/button_custom"
                        android:enabled="true"
                        android:padding="20dp"
                        android:text="@string/option_2"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/option3"
                        android:layout_width="wrap_content"
                        android:layout_height="75dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"
                        android:layout_gravity="center"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="40dp"
                        android:background="@drawable/button_custom"
                        android:enabled="true"
                        android:padding="20dp"
                        android:text="@string/option_3"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/option4"
                        android:layout_width="wrap_content"
                        android:layout_height="75dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_gravity="center"
                        android:layout_marginEnd="40dp"
                        android:layout_marginBottom="40dp"
                        android:background="@drawable/button_custom"
                        android:enabled="true"
                        android:padding="20dp"
                        android:text="@string/option_4"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                </RelativeLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>